# accountingMobile

./: .gitignore  README.md
.github/workflows/: build-apk.yml  build-flutter-apk.yml
accounting/: README copy.md  README.md  WEB_README.md  app.py  backend.py  buildozer.spec  calculator.py  data_manager.py  database.py  main.py  mobile_app.py  models.py  pyproject.toml  ui.py  validators.py
accounting/templates/: index.html
accounting_flutter/: README.md  pubspec.yaml
accounting_flutter/android/: local.properties
accounting_flutter/android/app/: build.gradle.kts
accounting_flutter/flutter-apk/: app-release.apk.sha1
accounting_flutter/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
accounting_flutter/ios/Flutter/ephemeral/: flutter_native_integration.env
accounting_flutter/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
accounting_flutter/ios/Runner.xcodeproj/: project.pbxproj
accounting_flutter/lib/: main.dart
accounting_flutter/lib/database/: database_helper.dart
accounting_flutter/lib/models/: bill.dart
accounting_flutter/lib/screens/: add_bill_screen.dart  home_screen.dart  view_bills_screen.dart
accounting_flutter/lib/services/: calculator.dart  data_transfer.dart  validators.dart
accounting_flutter/macos/Runner.xcodeproj/: project.pbxproj
accounting_flutter/test/: widget_test.dart
accounting_flutter/web/: index.html  manifest.json
accouting/: MOBILE_QUICKSTART.md  MOBILE_README.md  bills.db  buildozer.spec  mobile_app.spec  requirements.txt  run_web.py
accouting/templates/: index.html
(+6 files in other folders)
