[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "billmanager"
version = "1.0"
description = "Bill Manager - Offline mobile app for managing recurring bills"
authors = [{name = "Bill Manager"}]
requires-python = ">=3.8"
dependencies = [
    "kivy>=2.3.1",
]

[tool.briefcase]
project_name = "Bill Manager"
bundle = "org.billmanager"
url = "https://example.com"
license = "MIT"
author = "Bill Manager"
author_email = "info@billmanager.com"

[tool.briefcase.app.billmanager]
formal_name = "Bill Manager"
description = "Offline bill management app"
bundle = "org.billmanager"
url = "https://example.com"
sources = ["src/billmanager"]

[tool.briefcase.app.billmanager.android]
requires = [
    "kivy>=2.3.1",
]
